# Sapphire

./: .gitmodules  AbstractFunctions.py  AhoCorasick.py  CONTRIBUTING.md  EVALUATION.md  EvaluationFunction.py  KeywordQualification.py  LICENSE  LevensteinDistance.py  MANIFEST.in  README.md  REQUIREMENTS.md  TFIDFEvaluation.py  TextSapphire.py  TextScoring.py  YouTubeTranscript.py  makefile  pyproject.toml  requirements.txt  sapphire.py  static_analysis.txt  stopwords.py  test_abstract_functions.py  test_aho_corasick.py  test_evaluation_function.py  test_keyword_qualification.py  test_results.txt  test_sapphire.py  test_text_scoring.py  test_tfidf_evaluation.py
.trunk/: trunk.yaml
RigorEvaluation/: TextScoring.py  test_tfidf_evaluation.py
TokenSatisfaction/: AbstractFunctions.py  AhoCorasick.py  EvaluationFunction.py  LevensteinDistance.py  test_aho_corasick.py  test_keyword_qualification.py  test_levenshtein_distance  test_levenshtein_distance.py
rust/: Cargo.toml  makefile
rust/python/: py_sapphire.py  requirements.txt  string_conversion.py
rust/src/: main.rs
rust/src/abstractfunctions/: arraymanipulations.rs
rust/src/freqdist/: freqdist.rs
rust/src/scoreevaluation/: scoreevaluation.rs
rust/src/tf_idf/: tf_idf.rs
rust/src/tokenization/: tokenization.rs
rust/src/transcription/: transcription.rs
src/CSXL_Sapphire.egg-info/: PKG-INFO  SOURCES.txt
src/Sapphire.egg-info/: PKG-INFO  SOURCES.txt
src/sapphire/: sapphire.py
tests/sample_data/: example_xml_youtube_transcript.xml  example_youtube_video.html  (+2 more)
transcription/: YouTubeTranscript.py
(+21 files in other folders)
