[package]
name = "CSapphire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
httpmock = "0.6"
serde_json = "1"
regex = "1.4.2"
lazy_static = "1.4.0"
rust-tfidf = "1.1.1"
